--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@jridgewell/trace-mapping": "^0.3.25",
+    "@modelcontextprotocol/sdk": "^1.17.5",
     "@neondatabase/serverless": "^0.10.4",
     "@nevermined-io/payments": "^1.0.0-rc10",
     "@radix-ui/react-accordion": "^1.2.1",
